--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,10 @@
-beautifulsoup4
-Flask
+beautifulsoup4~=4.11.1
+Flask~=2.2.2
+pypdf2~=2.12.1
+requests~=2.28.1
+pytesseract~=0.3.10
+Pillow~=9.3.0
+pdfminer~=20191125
+airtable~=0.4.8
+urllib3~=1.26.13
+pyairtable~=1.4.0
